17/css/custom.css
/****** PLACE YOUR CUSTOM STYLES HERE ******/

/*h1,h2,h3,h4,h5,h6, section p, section span{ font-family: 'Avenir Next', 'Roboto', 'Raleway', 'Helvetica Neue', Helvetica, Arial, sans-serif; }*/

section.cover .logo {
  /*width: 90%;*/
  position: relative;
  /*left: 40px;*/
  height: 175px;
  width: 550.74px;
  /*transform: scale(0.9);*/
}
.muli-regular {
  font-family: 'Muli';
  font-weight: 400;
}

/*section.cover .logo-side-text {
  padding-top: 140px;
}

section.cover .logo-side-text h1 {
  font-weight: 300;
}*/
.brand {
  padding-top: 20px;
}
h3.brand {
  color: #5fc6c1;
}
.buttons {
  margin-top: 25px;
}
.btn {
  border-radius: 5px;
  /*margin: 10px auto;*/
}
.btn-filled {
  background-color: #8da1cd;
}
.image-bg .btn.btn-filled, .image-bg .btn-filled:visited {
  border-color: #8da1cd;
}
.acm, .footer {
  padding-top: 25px;
}
.footer i {
  font-size: 24px;
}
.social_icon {
  margin-right: 20px;
}

.cover.fullscreen .slides li {
  height: 100vh;
}
@media (max-width: 463px) {
  .btn {
    margin: 10px auto;
  }
}

